# novel-extender

./: .gitignore  README.md  pyproject.toml
docs/: longform_novel_design.md  tutorial_zh.md  usage_zh.md
examples/: novel.txt  request_samples.md  tutorial_commands.sh
src/novel_extender/: __init__.py  chapters.py  cli.py  context.py  embeddings.py  generation.py  openai_validator.py  run_logging.py  utils.py  vector_store.py  web_api.py  workflow.py
tests/: conftest.py  test_chapters.py  test_context.py  test_generation.py  test_logging.py  test_openai_validator.py  test_vector_store.py  test_web_api.py  test_workflow.py
web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.vue  api.test.ts  api.ts  style.css  vite-env.d.ts
