[project]
name = "novel-extender"
version = "0.2.0"
description = "Tools for extending, continuing, and revising novels."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "onnxruntime>=1.17,<1.22; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "openai>=1.109.0",
    "uvicorn[standard]>=0.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.0",
]

[project.scripts]
novel-extender = "novel_extender.cli:main"
novel-extender-web = "novel_extender.web_api:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
